[gd_scene load_steps=12 format=3 uid="uid://uxmg7mq10mgq"]

[ext_resource type="Script" uid="uid://csswtlckcwryr" path="res://Scripts/player.gd" id="1_cvnsp"]
[ext_resource type="PackedScene" uid="uid://7m24q4nd5to4" path="res://Scenes/necromancy_flame.tscn" id="2_6t5aa"]
[ext_resource type="Texture2D" uid="uid://db7mbv4tiseqr" path="res://Sprites/Skeleton_Type1.png" id="2_cvnsp"]
[ext_resource type="FontFile" uid="uid://byd1mg16qsm8y" path="res://Fonts/ModernDOS8x16.ttf" id="4_vgqql"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pegji"]
atlas = ExtResource("2_cvnsp")
region = Rect2(0, 0, 23, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_5abox"]
atlas = ExtResource("2_cvnsp")
region = Rect2(23, 0, 23, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8sxu"]
atlas = ExtResource("2_cvnsp")
region = Rect2(46, 0, 23, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_ks230"]
atlas = ExtResource("2_cvnsp")
region = Rect2(69, 0, 23, 30)

[sub_resource type="SpriteFrames" id="SpriteFrames_6t5aa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pegji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5abox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8sxu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ks230")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cvnsp"]
size = Vector2(32, 60)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cvnsp"]
radius = 24.0
height = 68.0

[node name="Player" type="CharacterBody2D" groups=["PlayerGroup"]]
collision_layer = 2
script = ExtResource("1_cvnsp")
flameObj = ExtResource("2_6t5aa")
jumpForce = -650.0

[node name="Visuals" type="Node2D" parent="."]
z_index = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Visuals"]
modulate = Color(0.570313, 1, 0, 1)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_6t5aa")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_cvnsp")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CapsuleShape2D_cvnsp")

[node name="InteractArea" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
shape = SubResource("CapsuleShape2D_cvnsp")

[node name="InteractMarker" type="Node2D" parent="."]
visible = false

[node name="Label" type="Label" parent="InteractMarker"]
z_index = 100
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_top = -48.0
offset_right = 22.5
offset_bottom = -17.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = ExtResource("4_vgqql")
theme_override_font_sizes/font_size = 30
text = "[E]"

[connection signal="area_entered" from="InteractArea" to="." method="_on_interact_area_area_entered"]
[connection signal="area_exited" from="InteractArea" to="." method="_on_interact_area_area_exited"]
